--- a/css/theme.css
+++ b/css/theme.css
@@ -32,8 +32,9 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /*--font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+
 
 *,
 *::before,
@@ -53,11 +54,12 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
+  font-family: 'Open Sans',serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #444444;
   text-align: left;
   background-color: #fff; }
 
@@ -72,12 +74,15 @@ hr {
   overflow: visible; }
 
 h1, h2, h3, h4, h5, h6 {
+  color: #333333;
+  font-weight: 700!important;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem; }
+    margin: 2rem 0 2rem!important;
+  }
+
 
 abbr[title],
 abbr[data-original-title] {
@@ -140,10 +145,10 @@ sup {
 a {
   color: #5533ff;
   text-decoration: none;
-  background-color: transparent; }
-  a:hover {
-    color: #2600e6;
-    text-decoration: underline; }
+  border-bottom: 2px solid transparent;
+  background-color: transparent; 
+  transition: border-bottom .15s ease-in;
+}
 
 a:not([href]):not([tabindex]) {
   color: inherit;
