--- a/css/theme-adding.css
+++ b/css/theme-adding.css
@@ -84,7 +84,7 @@ a.navbar-brand.custom-logo-link img {
 	font-weight: 800;
     border-radius: 5px;
     margin-right: 5px;
-    padding: 12px 17px;
+    padding: 8px 17px;
 
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
@@ -617,14 +617,14 @@ h2{font-size:28px;}
 	a.navbar-brand.custom-logo-link {
 		position: inherit;
 	    padding-left: 0px;
-	    height: 50px;
+	    height: 40px;
 	}
 
 	.navbar-primary {
-	    height: 74px;
+	    height: 55px;
 	}
 	.primary-menu-box, #navbarNavDropdown, #main-menu,  #main-menu li, #main-menu a{
-		height: 50px;
+		height: 40px;
 	}
 
 	/*sticky bar di pc*/
@@ -735,6 +735,11 @@ h2{font-size:28px;}
 
 div#dpsp-floating-sidebar {
     top: 440px!important;
+    transition: all 0.3s cubic-bezier(0.25, 0.1, 0.19, 0.68) 0s;
+}
+
+div#dpsp-floating-sidebar.nempel {
+    top: 118px!important;
 }
 
 .dpsp-position-left.dpsp-shape-rounded .dpsp-networks-btns-sidebar .dpsp-network-btn.dpsp-first, .dpsp-position-left.dpsp-shape-rounded .dpsp-networks-btns-sidebar .dpsp-network-btn.dpsp-first .dpsp-network-icon {
