sama dengan blogpandu

--- a/css/theme-adding.css
+++ b/css/theme-adding.css
@@ -530,7 +530,7 @@ aside.widget {
 .widget-title span {
     padding: 8px 16px;
     color: #fff;
-    background-color: #957fd5;
+    background-color: #4e3ba4;
     border-radius: 2px 2px 0 0;
     display: inline-block;
 }
